adjustments made having issues with video on mobile being to large chrome inspect tools looks good but on the phone its really bad. Might have to make many adjustments

--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -57,7 +57,7 @@
     left: 0;
     display: block;
     width: 340px;
-    height: 80%;
+    height: 240px;
     max-height: 100%;
     object-fit:cover;
     transition: all 0.2s linear;
